# sportfac

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  2014-11-12.json  2014-empty.json  =3.2.20  CHANGELOG  Dockerfile  INSTALL  INSTALL_MULTI_DB  LICENSE.txt  README.md  README.rst  TEST.rst  check-updates.py  docker-compose.yml  fabfile.py  package.json  pyproject.toml  setup.cfg  update.sh
backup/: activities.json  flatpages.json  mail.json  registrations-fixed.json  registrations.json  school-fixed.json  school.json  users-fixed.json  users-model1.json  users.json
config/: gunicorn.conf  postactivate  postactivate.tpl  supervisord.conf  virtualenv_project
docs/: Makefile  backup.rst  checklist-new-instance.rst  conf.py  configurer.rst  index.rst  logo terresainte.psd  test.rst
initial_data/: CH.txt  base-data.json  only-steps-migration.json
requirements/: base.txt  local.txt  production.txt  test.txt
scripts/: assign_absences_to_latest_course.py  assign_instructors.py  clean_absences.py  clean_children.py  cleanup_absences.py  copy_activities_from_tenant_to_tenant.py  copy_courses_and_registrations_from_period_to_other_period.py  disable_all_users_but_instructors.py  email_all_parents.py  email_all_registered.py  email_end_registration.py  email_non_payers.py  export_courses_tab_nyon.py  export_unpaid_invoices_excel.py  fix_payments.py  import_XLSX.py  import_contract_numbers_from_abacus.py  import_ids_for_supervisors_montreux.py  initial_import.py  ltdp_recreate_missing_absences.py  mail-error.py  merge_users_databases.py  move_to_multi_tenant.py  (+8 more)
(+1224 files in other folders)
