[tool.poetry]
name = "sportfac"
version = "2.0"
description = ""
authors = ["Gregory Favre <greg@beyondthewall.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
Django = "3.1.14"
#djangorestframework = "*"
#django-filter = "*"
#celery = "^5.2.7"
#django-tenants = "^3.4.7"
#tenant-schemas-celery = "^2.0.0"
#djangorestframework-datatables = "*"
#django-braces = "*"
#django-floppyforms = "*"
#django-select2 = "*"
#django-autoslug = "*"
#django-model-utils = "*"
#django-localflavor = "*"
#django-ckeditor = "*"
#django-formtools = "*"
#django-picklefield = "*"
#django-multiupload = "*"
#django-phonenumber-field = "*"
#django-crispy-forms = "*"
#django-countries = "*"
#django-recaptcha = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

#[build-system]
#requires = ["poetry>=1.3.1"]
#build-backend = "poetry.core.masonry.api"
